--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@ img {
 
 .topPage header {
   height: 90vh;
-  background: url(../images/top_bg.png) no-repeat center top/cover;
+  background: url(images/top_bg.png) no-repeat center top/cover;
   padding-top: 50px;
   margin-bottom: 64px;
 }
