--- a/ikkaisei/stylesheet.css
+++ b/ikkaisei/stylesheet.css
@@ -4,12 +4,36 @@
 
 body {
   margin: -0;
-  font-family: "Hiragino Kaku Gothic ProN";
+  font-family: 'Catamaran','Noto Sans JP' sans-serif;
   font-size: 16px;
-  line-height:  1.5;
-  color: #b3aeb5;
+  line-height:  1.0;
+  color: #fff;
 }
 
+img {
+  max-width: 100%;
+}
+
+.topPage header {
+  height: 90vh;
+  background: url(images/top_bg.png) no-repeat center top/cover;
+  padding-top: 50px;
+  margin-bottom: 64px;
+}
+
+.topPage header h1 img {
+  width:  240px;
+}
+.topPage header h1 {
+  text-align: center;
+}
+
+.linkList {
+  padding: 0 20px;
+}
+.linkList li {
+  margin-bottom: 40px;
+}
 a {
   text-decoration: none;
 }
@@ -96,10 +120,6 @@ header {
   margin-top: 20px;
 }
 
-.header-left h1 {
-  float: left;
-  margin-bottom: auto;
-}
 
 .header-right {
   float: right;
@@ -241,7 +261,7 @@ footer {
 @media all and (max-width: 670px) {
   .header-right {
     display: none;
-  }
+  }    
 
   .menu-icon {
     display: block;
@@ -285,6 +305,10 @@ footer {
     position: relative;
   }
 
+  @media screen and (max-width 640px) {
+  
+  }
+  
   #logo {
     display: none;
   }
