--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,13 +2,17 @@
   box-sizing: border-box;
 }
 
+#container {
+  margin: auto;
+  max-width: 960px;
+}
+
 body {
   margin: -0;
   font-family: 'Catamaran','Noto Sans JP' sans-serif;
   font-size: 16px;
   line-height:  1.0;
   color: #fff;
-  overflow:hidden;
 }
 
 img {
