--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,9 +38,10 @@ a {
   text-decoration: none;
 }
 
-.container {
-  width: 100%;
-  padding: 0 15px;
+#container {
+  position: relative;
+  width: 80%;
+  max-width: 960px;
   margin: 0 auto;
 }
 
