--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,24 +17,15 @@ img {
 
 .topPage header {
   height: 90vh;
-  background: url(images/top_bg.png) no-repeat center top/cover;
+  background: url(../images/top_bg.png) no-repeat center top/cover;
   padding-top: 50px;
   margin-bottom: 64px;
 }
-//
+
 .topPage header h1 img {
-  width:  240px;
-}
-.topPage header h1 {
-  text-align: center;
+  width: 240px;
 }
 
-.linkList {
-  padding: 0 20px;
-}
-.linkList li {
-  margin-bottom: 40px;
-}
 a {
   text-decoration: none;
 }
@@ -262,7 +253,7 @@ footer {
 @media all and (max-width: 670px) {
   .header-right {
     display: none;
-  }    
+  }
 
   .menu-icon {
     display: block;
@@ -306,10 +297,6 @@ footer {
     position: relative;
   }
 
-  @media screen and (max-width 640px) {
-  
-  }
-  
   #logo {
     display: none;
   }
