--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  
 }
 
 body {
@@ -31,6 +32,7 @@ a {
 }
 
 .container {
+  overflow:hidden;
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
