--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  
 }
 
 body {
@@ -16,6 +17,7 @@ img {
 
 .topPage header {
   height: 90vh;
+  text-align: center;
   background: url(../images/top_bg.png) no-repeat center top/cover;
   padding-top: 50px;
   margin-bottom: 64px;
@@ -30,6 +32,7 @@ a {
 }
 
 .container {
+  overflow:hidden;
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
